--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -45,3 +45,9 @@
   line-height: normal;
   @apply px-[60px] py-6;
 }
+
+@media (min-width: 1600px) and (max-height: 850px){
+  .main img {
+    width: 50% !important;
+  }  
+}
