--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,45 +9,60 @@
 }
 .main h3 {
   color: #e59aff;
-  font-size: 24px;
+  font-size: 24rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  letter-spacing: 0.72px;
+  letter-spacing: 0.72rem;
   text-transform: uppercase;
 }
 .main .starting_date {
-  height: 46px;
-  @apply flex gap-2 items-center border-[1.5px] border-white px-5 py-3 rounded-xl;
+  height: 46rem;
+  @apply flex gap-[8rem] items-center border-[1.5rem] border-white px-[20rem] py-[12rem] rounded-[12rem];
 }
 .main .starting_date span {
   color: #fff;
-  font-size: 18px;
+  font-size: 18rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  letter-spacing: 0.54px;
+  letter-spacing: 0.54rem;
 }
 .main .indicator {
   background: linear-gradient(84deg, #6950ff 0%, #6950ff 0.01%, #c631fb 100%),
     #d9d9d9;
-  @apply min-w-[16px] h-4 rounded-full;
+  @apply min-w-[16rem] h-[16rem] rounded-full;
 }
 
 .main .button {
-  border-radius: 20px;
+  border-radius: 20rem;
   background: linear-gradient(84deg, #6950ff 0%, #6950ff 0.01%, #c631fb 100%);
-  box-shadow: 0px 15px 36px 0px rgba(198, 49, 251, 0.3);
+  box-shadow: 0rem 15rem 36rem 0rem rgba(198, 49, 251, 0.3);
   color: #fff;
-  font-size: 18px;
+  font-size: 18rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  @apply px-[60px] py-6;
+  @apply px-[60rem] py-[24rem];
 }
 
-@media (min-width: 1600px) and (max-height: 850px){
+@media (min-aspect-ratio: 2.6/1) {
+  .main img {
+    width: 700rem !important;
+  }
+}
+
+/* @media (min-width: 1600px) and (max-height: 850px){
   .main img {
     width: 50% !important;
   }  
 }
+
+@media (min-width: 1280px) and (max-height: 720px) {
+  .main img {
+    width: 50% !important;
+  }  
+  .main .content {
+    row-gap: 24rem;
+  }
+} */
