--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -46,8 +46,8 @@
   @apply px-[60px] py-6;
 }
 
-@media (min-width: 1600px) and (max-height: 850px){
+@media (min-aspect-ratio: 2.4/1) {
   .main img {
     width: 50% !important;
-  }  
+  }
 }
