--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -57,8 +57,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-
-  @apply px-[60px] sm:py-6 py-[18px] md:w-auto w-full text-center;
+  @apply px-[60px] py-6 md:w-auto w-full text-center;
 }
 
 @media (min-aspect-ratio: 2.4/1) {
