--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -59,9 +59,23 @@
   line-height: normal;
   @apply px-[60px] py-6 md:w-auto w-full text-center;
 }
+.submit_button {
+  border-radius: 20px;
+  background: linear-gradient(84deg, #6950ff 0%, #6950ff 0.01%, #c631fb 100%);
+  box-shadow: 0px 15px 36px 0px rgba(198, 49, 251, 0.3);
+  color: #fff;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  @apply px-[40px] py-5 md:w-auto w-full text-center;
+}
 
 @media (min-aspect-ratio: 2.4/1) {
   .main img {
     width: 50% !important;
   }
+}
+.main .form_control input {
+  @apply py-3 px-4 rounded-xl bg-[#eaeaea] text-[#A2A2A2];
 }
