--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -51,11 +51,10 @@
   background: linear-gradient(84deg, #6950ff 0%, #6950ff 0.01%, #c631fb 100%);
   box-shadow: 0px 15px 36px 0px rgba(198, 49, 251, 0.3);
   color: #fff;
-  font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  @apply px-[60px] py-6 md:w-auto w-full text-center;
+  @apply px-[60px] md:py-6 p-[18px] md:text-lg text-base md:w-auto w-full text-center;
 }
 .submit_button {
   border-radius: 20px;
