--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -62,7 +62,9 @@
   line-height: normal;
   @apply px-[40px] py-5 md:w-auto w-full text-center;
 }
-
+.submit_mobile {
+  box-shadow: 0px 4px 16px 0px rgba(198, 49, 251, 0.30) !important;
+}
 @media (min-aspect-ratio: 2.4/1) {
   .main img {
     width: 50% !important;
